--- a/5eOGL/5eOGL.html
+++ b/5eOGL/5eOGL.html
@@ -29,7 +29,7 @@
   <div class="inspiration-row grid background">
     <div class="inspiration border">
       <h1 data-i18n="inspiration"></h1>
-      <input name="attr_inspiration" type="checkbox" value=""/>
+      <input name="attr_inspiration" type="checkbox"/>
     </div>
     <div class="initiative border">
       <button data-i18n="initiative" name="roll_initiative" type="roll" value=""></button>
