finish advancement tab

--- a/Warhammer 40k Black Crusade/warhammer40k.html
+++ b/Warhammer 40k Black Crusade/warhammer40k.html
@@ -958,9 +958,9 @@
           <h2 class="text-center" data-i18n="total alignment advances"></h2>
         </div>
         <div class="rowx grid">
-          <h3 data-i18n="knorne"></h3>
-          <label data-i18n-title="knorne">
-            <input name="attr_knorne" title="@{knorne}" type="number" value=""/>
+          <h3 data-i18n="khorne"></h3>
+          <label data-i18n-title="khorne">
+            <input name="attr_khorne" title="@{khorne}" type="number" value=""/>
           </label>
         </div>
         <div class="rowx grid">
