fix settings in advancement

--- a/Warhammer 40k Black Crusade/warhammer40k.html
+++ b/Warhammer 40k Black Crusade/warhammer40k.html
@@ -922,7 +922,7 @@
               <input class="toggles text-center" name="attr_collapse" title="@{collapse}" type="checkbox" value="collapse"/><span class="toggles text-center pictos">i</span>
               <input class="toggles text-center" name="attr_settings" title="@{settings}" type="checkbox" value="settings"/><span class="toggles text-center pictos">x</span>
               <div class="rowx collapse"><span class="collapse" name="attr_description"></span></div>
-              <div class="rowx grid settings">
+              <div class="rowx settings">
                 <label data-i18n-title="name">
                   <input data-i18n-placeholder="name" name="attr_name" placeholder="name" title="@{name}" type="text" value=""/>
                 </label>
